--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,11 @@
 			<version>2.2.0</version>
 		</dependency>
 
-
 		<dependency>
-			<groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp</artifactId>
-			<version>4.9.0</version>
+			<groupId>ru.tinkoff.piapi</groupId>
+			<artifactId>java-sdk-core</artifactId>
+			<version>1.5</version>
 		</dependency>
-		<dependency>
-			<groupId>ru.tinkoff.invest</groupId>
-			<artifactId>openapi-java-sdk-java8</artifactId>
-			<version>0.5.1</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
